[gd_scene format=3 uid="uid://dryjn7f2ubrq"]

[ext_resource type="Script" uid="uid://c4baingkmkmxx" path="res://Scripts/Menu/menu.gd" id="1_vf0ft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vf0ft"]
bg_color = Color(0, 0, 0, 0.74902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ayk24"]
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)

[node name="Menu" type="CanvasLayer" unique_id=570671763 groups=["menu"]]
process_mode = 4
visible = false
script = ExtResource("1_vf0ft")

[node name="BGDimmer" type="Panel" parent="." unique_id=2118836822]
show_behind_parent = true
z_index = 2
z_as_relative = false
offset_right = 1893.0
offset_bottom = 1094.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vf0ft")

[node name="BGForRewardBox" type="Panel" parent="BGDimmer" unique_id=1057083572]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -227.0
offset_right = 278.0
offset_bottom = 227.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ayk24")

[node name="VBoxContainer" type="VBoxContainer" parent="BGDimmer/BGForRewardBox" unique_id=481967510]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -160.0
offset_right = 112.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.35
alignment = 1

[node name="Label" type="Label" parent="BGDimmer/BGForRewardBox/VBoxContainer" unique_id=1879383099]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.91
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "MENU"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BGDimmer/BGForRewardBox/VBoxContainer" unique_id=1620172858]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label2" type="Label" parent="BGDimmer/BGForRewardBox/VBoxContainer/VBoxContainer" unique_id=1119975610]
layout_mode = 2
text = "Game Speed"
horizontal_alignment = 1

[node name="CombatSpeedSlider" type="HSlider" parent="BGDimmer/BGForRewardBox/VBoxContainer/VBoxContainer" unique_id=1105865684]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 2.0

[node name="VBoxContainer2" type="VBoxContainer" parent="BGDimmer/BGForRewardBox/VBoxContainer" unique_id=1816096045]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label2" type="Label" parent="BGDimmer/BGForRewardBox/VBoxContainer/VBoxContainer2" unique_id=1697330004]
layout_mode = 2
text = "Something else"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="BGDimmer/BGForRewardBox/VBoxContainer/VBoxContainer2" unique_id=1791656887]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Spacer2" type="Panel" parent="BGDimmer/BGForRewardBox/VBoxContainer" unique_id=1938127533]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="BGDimmer/BGForRewardBox/VBoxContainer" unique_id=1945817863]
layout_mode = 2
text = "New Game"

[node name="Spacer" type="Panel" parent="BGDimmer/BGForRewardBox/VBoxContainer" unique_id=2050410510]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="CloseMenuButton" type="Button" parent="BGDimmer/BGForRewardBox/VBoxContainer" unique_id=2126242058]
layout_mode = 2
text = "Close"

[connection signal="drag_ended" from="BGDimmer/BGForRewardBox/VBoxContainer/VBoxContainer/CombatSpeedSlider" to="." method="_on_combat_speed_slider_drag_ended"]
[connection signal="button_down" from="BGDimmer/BGForRewardBox/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_down"]
[connection signal="button_down" from="BGDimmer/BGForRewardBox/VBoxContainer/CloseMenuButton" to="." method="_on_close_menu_button_down"]
